project_sources/collector/fixtures/powershell_analysis/bad/unused_variable.ps1
$ReportPath = "out/report.json"
$UnusedValidationState = "FAIL"
Write-Output $ReportPath
